# neat

./: pyproject.toml
graphs/: Digraph.gv  Graph.gv
neat/: __main__.py  draw.py  draw2.py  genes.py  genes2.py  network.py  network2.py  util.py
neat/genome/: __init__.py  _genome.py
neat/genome/gene/: __init__.py  types.py
neat/network/: __init__.py  _network.py  _network2.py  _neuron.py  _synapse.py  draw.py
